template.json
{
	"$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
	"contentVersion": "1.0.0.0",
	"parameters": {
		"bastionHosts_Shared_Bastion_name": {
			"defaultValue": "Shared-Bastion",
			"type": "String"
		},
		"virtualNetworks_Shared_VNet_name": {
			"defaultValue": "Shared-VNet",
			"type": "String"
		},
		"publicIPAddresses_Bastion_PIP_name": {
			"defaultValue": "Bastion-PIP",
			"type": "String"
		},
		"networkSecurityGroups_Bastion_NSG_name": {
			"defaultValue": "Bastion-NSG",
			"type": "String"
		},
		"privateDnsZones_testdb_psql_private_postgres_database_azure_com_name": {
			"defaultValue": "testdb-psql.private.postgres.database.azure.com",
			"type": "String"
		}
	},
	"variables": {},
	"resources": [{
			"type": "Microsoft.Network/networkSecurityGroups",
			"apiVersion": "2020-11-01",
			"name": "[parameters('networkSecurityGroups_Bastion_NSG_name')]",
			"location": "australiaeast",
			"properties": {
				"securityRules": [{
						"name": "AllowHttpsInbound",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "443",
							"sourceAddressPrefix": "Internet",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 120,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "AllowGatewayManagerInbound",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "443",
							"sourceAddressPrefix": "GatewayManager",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 130,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "AllowAzureLoadBalancerInbound",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "443",
							"sourceAddressPrefix": "AzureLoadBalancer",
							"destinationAddressPrefix": "*",
							"access": "Allow",
							"priority": 140,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "AllowBastionHostCommunication",
						"properties": {
							"protocol": "*",
							"sourcePortRange": "*",
							"sourceAddressPrefix": "VirtualNetwork",
							"destinationAddressPrefix": "VirtualNetwork",
							"access": "Allow",
							"priority": 150,
							"direction": "Inbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [
								"8080",
								"5701"
							],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "AllowSshRdpOutbound",
						"properties": {
							"protocol": "*",
							"sourcePortRange": "*",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "VirtualNetwork",
							"access": "Allow",
							"priority": 100,
							"direction": "Outbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [
								"22",
								"3389"
							],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "AllowAzureCloudOutbound",
						"properties": {
							"protocol": "TCP",
							"sourcePortRange": "*",
							"destinationPortRange": "443",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "AzureCloud",
							"access": "Allow",
							"priority": 110,
							"direction": "Outbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "AllowBastionCommunication",
						"properties": {
							"protocol": "*",
							"sourcePortRange": "*",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "VirtualNetwork",
							"access": "Allow",
							"priority": 120,
							"direction": "Outbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [
								"8080",
								"5701"
							],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					},
					{
						"name": "AllowGetSessionInformation",
						"properties": {
							"protocol": "*",
							"sourcePortRange": "*",
							"destinationPortRange": "80",
							"sourceAddressPrefix": "*",
							"destinationAddressPrefix": "Internet",
							"access": "Allow",
							"priority": 130,
							"direction": "Outbound",
							"sourcePortRanges": [],
							"destinationPortRanges": [],
							"sourceAddressPrefixes": [],
							"destinationAddressPrefixes": []
						}
					}
				]
			}
		},
		{
			"type": "Microsoft.Network/privateDnsZones",
			"apiVersion": "2018-09-01",
			"name": "[parameters('privateDnsZones_testdb_psql_private_postgres_database_azure_com_name')]",
			"location": "global",
			"properties": {
				"maxNumberOfRecordSets": 25000,
				"maxNumberOfVirtualNetworkLinks": 1000,
				"maxNumberOfVirtualNetworkLinksWithRegistration": 100,
				"numberOfRecordSets": 2,
				"numberOfVirtualNetworkLinks": 1,
				"numberOfVirtualNetworkLinksWithRegistration": 0,
				"provisioningState": "Succeeded"
			}
		},
		{
			"type": "Microsoft.Network/publicIPAddresses",
			"apiVersion": "2020-11-01",
			"name": "[parameters('publicIPAddresses_Bastion_PIP_name')]",
			"location": "australiaeast",
			"sku": {
				"name": "Standard",
				"tier": "Regional"
			},
			"properties": {
				"ipAddress": "20.211.181.36",
				"publicIPAddressVersion": "IPv4",
				"publicIPAllocationMethod": "Static",
				"idleTimeoutInMinutes": 4,
				"ipTags": []
			}
		},
		{
			"type": "Microsoft.Network/networkSecurityGroups/securityRules",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('networkSecurityGroups_Bastion_NSG_name'), '/AllowAzureCloudOutbound')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"protocol": "TCP",
				"sourcePortRange": "*",
				"destinationPortRange": "443",
				"sourceAddressPrefix": "*",
				"destinationAddressPrefix": "AzureCloud",
				"access": "Allow",
				"priority": 110,
				"direction": "Outbound",
				"sourcePortRanges": [],
				"destinationPortRanges": [],
				"sourceAddressPrefixes": [],
				"destinationAddressPrefixes": []
			}
		},
		{
			"type": "Microsoft.Network/networkSecurityGroups/securityRules",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('networkSecurityGroups_Bastion_NSG_name'), '/AllowAzureLoadBalancerInbound')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"protocol": "TCP",
				"sourcePortRange": "*",
				"destinationPortRange": "443",
				"sourceAddressPrefix": "AzureLoadBalancer",
				"destinationAddressPrefix": "*",
				"access": "Allow",
				"priority": 140,
				"direction": "Inbound",
				"sourcePortRanges": [],
				"destinationPortRanges": [],
				"sourceAddressPrefixes": [],
				"destinationAddressPrefixes": []
			}
		},
		{
			"type": "Microsoft.Network/networkSecurityGroups/securityRules",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('networkSecurityGroups_Bastion_NSG_name'), '/AllowBastionCommunication')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"protocol": "*",
				"sourcePortRange": "*",
				"sourceAddressPrefix": "*",
				"destinationAddressPrefix": "VirtualNetwork",
				"access": "Allow",
				"priority": 120,
				"direction": "Outbound",
				"sourcePortRanges": [],
				"destinationPortRanges": [
					"8080",
					"5701"
				],
				"sourceAddressPrefixes": [],
				"destinationAddressPrefixes": []
			}
		},
		{
			"type": "Microsoft.Network/networkSecurityGroups/securityRules",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('networkSecurityGroups_Bastion_NSG_name'), '/AllowBastionHostCommunication')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"protocol": "*",
				"sourcePortRange": "*",
				"sourceAddressPrefix": "VirtualNetwork",
				"destinationAddressPrefix": "VirtualNetwork",
				"access": "Allow",
				"priority": 150,
				"direction": "Inbound",
				"sourcePortRanges": [],
				"destinationPortRanges": [
					"8080",
					"5701"
				],
				"sourceAddressPrefixes": [],
				"destinationAddressPrefixes": []
			}
		},
		{
			"type": "Microsoft.Network/networkSecurityGroups/securityRules",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('networkSecurityGroups_Bastion_NSG_name'), '/AllowGatewayManagerInbound')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"protocol": "TCP",
				"sourcePortRange": "*",
				"destinationPortRange": "443",
				"sourceAddressPrefix": "GatewayManager",
				"destinationAddressPrefix": "*",
				"access": "Allow",
				"priority": 130,
				"direction": "Inbound",
				"sourcePortRanges": [],
				"destinationPortRanges": [],
				"sourceAddressPrefixes": [],
				"destinationAddressPrefixes": []
			}
		},
		{
			"type": "Microsoft.Network/networkSecurityGroups/securityRules",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('networkSecurityGroups_Bastion_NSG_name'), '/AllowGetSessionInformation')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"protocol": "*",
				"sourcePortRange": "*",
				"destinationPortRange": "80",
				"sourceAddressPrefix": "*",
				"destinationAddressPrefix": "Internet",
				"access": "Allow",
				"priority": 130,
				"direction": "Outbound",
				"sourcePortRanges": [],
				"destinationPortRanges": [],
				"sourceAddressPrefixes": [],
				"destinationAddressPrefixes": []
			}
		},
		{
			"type": "Microsoft.Network/networkSecurityGroups/securityRules",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('networkSecurityGroups_Bastion_NSG_name'), '/AllowHttpsInbound')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"protocol": "TCP",
				"sourcePortRange": "*",
				"destinationPortRange": "443",
				"sourceAddressPrefix": "Internet",
				"destinationAddressPrefix": "*",
				"access": "Allow",
				"priority": 120,
				"direction": "Inbound",
				"sourcePortRanges": [],
				"destinationPortRanges": [],
				"sourceAddressPrefixes": [],
				"destinationAddressPrefixes": []
			}
		},
		{
			"type": "Microsoft.Network/networkSecurityGroups/securityRules",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('networkSecurityGroups_Bastion_NSG_name'), '/AllowSshRdpOutbound')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"protocol": "*",
				"sourcePortRange": "*",
				"sourceAddressPrefix": "*",
				"destinationAddressPrefix": "VirtualNetwork",
				"access": "Allow",
				"priority": 100,
				"direction": "Outbound",
				"sourcePortRanges": [],
				"destinationPortRanges": [
					"22",
					"3389"
				],
				"sourceAddressPrefixes": [],
				"destinationAddressPrefixes": []
			}
		},
		{
			"type": "Microsoft.Network/privateDnsZones/A",
			"apiVersion": "2018-09-01",
			"name": "[concat(parameters('privateDnsZones_testdb_psql_private_postgres_database_azure_com_name'), '/f59cfaee9795')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDnsZones_testdb_psql_private_postgres_database_azure_com_name'))]"
			],
			"properties": {
				"ttl": 30,
				"aRecords": [{
					"ipv4Address": "10.0.20.4"
				}]
			}
		},
		{
			"type": "Microsoft.Network/privateDnsZones/SOA",
			"apiVersion": "2018-09-01",
			"name": "[concat(parameters('privateDnsZones_testdb_psql_private_postgres_database_azure_com_name'), '/@')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDnsZones_testdb_psql_private_postgres_database_azure_com_name'))]"
			],
			"properties": {
				"ttl": 3600,
				"soaRecord": {
					"email": "azureprivatedns-host.microsoft.com",
					"expireTime": 2419200,
					"host": "azureprivatedns.net",
					"minimumTtl": 10,
					"refreshTime": 3600,
					"retryTime": 300,
					"serialNumber": 1
				}
			}
		},
		{
			"type": "Microsoft.Network/virtualNetworks",
			"apiVersion": "2020-11-01",
			"name": "[parameters('virtualNetworks_Shared_VNet_name')]",
			"location": "australiaeast",
			"dependsOn": [
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"addressSpace": {
					"addressPrefixes": [
						"10.0.0.0/16"
					]
				},
				"subnets": [{
						"name": "AppGwSubnet",
						"properties": {
							"addressPrefix": "10.0.2.0/24",
							"delegations": [],
							"privateEndpointNetworkPolicies": "Enabled",
							"privateLinkServiceNetworkPolicies": "Enabled"
						}
					},
					{
						"name": "JumboxTestSubnet",
						"properties": {
							"addressPrefix": "10.0.3.0/24",
							"serviceEndpoints": [],
							"delegations": [],
							"privateEndpointNetworkPolicies": "Enabled",
							"privateLinkServiceNetworkPolicies": "Enabled"
						}
					},
					{
						"name": "AzureBastionSubnet",
						"properties": {
							"addressPrefix": "10.0.1.0/24",
							"networkSecurityGroup": {
								"id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
							},

							"delegations": [],
							"privateEndpointNetworkPolicies": "Enabled",
							"privateLinkServiceNetworkPolicies": "Enabled"
						}
					},
					{
						"name": "TestAKSSubnet",
						"properties": {
							"addressPrefix": "10.0.50.0/23",
							"serviceEndpoints": [],
							"delegations": [],
							"privateEndpointNetworkPolicies": "Enabled",
							"privateLinkServiceNetworkPolicies": "Enabled"
						}
					},
					{
						"name": "ProdAKSSubnet",
						"properties": {
							"addressPrefix": "10.0.60.0/23",
							"serviceEndpoints": [],
							"delegations": [],
							"privateEndpointNetworkPolicies": "Enabled",
							"privateLinkServiceNetworkPolicies": "Enabled"
						}
					},
					{
						"name": "ProdDbSubnet",
						"properties": {
							"addressPrefix": "10.0.21.0/24",
							"serviceEndpoints": [],
							"delegations": [],
							"privateEndpointNetworkPolicies": "Enabled",
							"privateLinkServiceNetworkPolicies": "Enabled"
						}
					},
					{
						"name": "TestDbSubnet",
						"properties": {
							"addressPrefix": "10.0.20.0/24",
							"serviceEndpoints": [{
								"service": "Microsoft.Storage",
								"locations": [
									"australiaeast",
									"australiasoutheast"
								]
							}],
							"delegations": [{
								"name": "dlg-Microsoft.DBforPostgreSQL-flexibleServers",
								"properties": {
									"serviceName": "Microsoft.DBforPostgreSQL/flexibleServers"
								}
							}],
							"privateEndpointNetworkPolicies": "Enabled",
							"privateLinkServiceNetworkPolicies": "Enabled"
						}
					}
				],
				"virtualNetworkPeerings": [],
				"enableDdosProtection": false
			}
		},
		{
			"type": "Microsoft.Network/virtualNetworks/subnets",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('virtualNetworks_Shared_VNet_name'), '/AppGwSubnet')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Shared_VNet_name'))]"
			],
			"properties": {
				"addressPrefix": "10.0.2.0/24",
				"delegations": [],
				"privateEndpointNetworkPolicies": "Enabled",
				"privateLinkServiceNetworkPolicies": "Enabled"
			}
		},
		{
			"type": "Microsoft.Network/virtualNetworks/subnets",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('virtualNetworks_Shared_VNet_name'), '/JumboxTestSubnet')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Shared_VNet_name'))]"
			],
			"properties": {
				"addressPrefix": "10.0.3.0/24",
				"serviceEndpoints": [],
				"delegations": [],
				"privateEndpointNetworkPolicies": "Enabled",
				"privateLinkServiceNetworkPolicies": "Enabled"
			}
		},
		{
			"type": "Microsoft.Network/virtualNetworks/subnets",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('virtualNetworks_Shared_VNet_name'), '/ProdAKSSubnet')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Shared_VNet_name'))]"
			],
			"properties": {
				"addressPrefix": "10.0.60.0/23",
				"serviceEndpoints": [],
				"delegations": [],
				"privateEndpointNetworkPolicies": "Enabled",
				"privateLinkServiceNetworkPolicies": "Enabled"
			}
		},
		{
			"type": "Microsoft.Network/virtualNetworks/subnets",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('virtualNetworks_Shared_VNet_name'), '/ProdDbSubnet')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Shared_VNet_name'))]"
			],
			"properties": {
				"addressPrefix": "10.0.21.0/24",
				"serviceEndpoints": [],
				"delegations": [],
				"privateEndpointNetworkPolicies": "Enabled",
				"privateLinkServiceNetworkPolicies": "Enabled"
			}
		},
		{
			"type": "Microsoft.Network/virtualNetworks/subnets",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('virtualNetworks_Shared_VNet_name'), '/TestAKSSubnet')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Shared_VNet_name'))]"
			],
			"properties": {
				"addressPrefix": "10.0.50.0/23",
				"serviceEndpoints": [],
				"delegations": [],
				"privateEndpointNetworkPolicies": "Enabled",
				"privateLinkServiceNetworkPolicies": "Enabled"
			}
		},
		{
			"type": "Microsoft.Network/virtualNetworks/subnets",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('virtualNetworks_Shared_VNet_name'), '/TestDbSubnet')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Shared_VNet_name'))]"
			],
			"properties": {
				"addressPrefix": "10.0.20.0/24",
				"serviceEndpoints": [{
					"service": "Microsoft.Storage",
					"locations": [
						"australiaeast",
						"australiasoutheast"
					]
				}],
				"delegations": [{
					"name": "dlg-Microsoft.DBforPostgreSQL-flexibleServers",
					"properties": {
						"serviceName": "Microsoft.DBforPostgreSQL/flexibleServers"
					}
				}],
				"privateEndpointNetworkPolicies": "Enabled",
				"privateLinkServiceNetworkPolicies": "Enabled"
			}
		},
		{
			"type": "Microsoft.Network/bastionHosts",
			"apiVersion": "2020-11-01",
			"name": "[parameters('bastionHosts_Shared_Bastion_name')]",
			"location": "australiaeast",
			"dependsOn": [
				"[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Bastion_PIP_name'))]",
				"[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Shared_VNet_name'), 'AzureBastionSubnet')]"
			],
			"sku": {
				"name": "Basic"
			},
			"properties": {
				"dnsName": "bst-1f2aa138-c2b0-4465-81df-b4ba7269d081.bastion.azure.com",
				"ipConfigurations": [{
					"name": "IpConf",
					"properties": {
						"privateIPAllocationMethod": "Dynamic",
						"publicIPAddress": {
							"id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_Bastion_PIP_name'))]"
						},
						"subnet": {
							"id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_Shared_VNet_name'), 'AzureBastionSubnet')]"
						}
					}
				}]
			}
		},
		{
			"type": "Microsoft.Network/privateDnsZones/virtualNetworkLinks",
			"apiVersion": "2018-09-01",
			"name": "[concat(parameters('privateDnsZones_testdb_psql_private_postgres_database_azure_com_name'), '/wy6dhpidcek44')]",
			"location": "global",
			"dependsOn": [
				"[resourceId('Microsoft.Network/privateDnsZones', parameters('privateDnsZones_testdb_psql_private_postgres_database_azure_com_name'))]",
				"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Shared_VNet_name'))]"
			],
			"properties": {
				"registrationEnabled": false,
				"virtualNetwork": {
					"id": "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Shared_VNet_name'))]"
				}
			}
		},
		{
			"type": "Microsoft.Network/virtualNetworks/subnets",
			"apiVersion": "2020-11-01",
			"name": "[concat(parameters('virtualNetworks_Shared_VNet_name'), '/AzureBastionSubnet')]",
			"dependsOn": [
				"[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_Shared_VNet_name'))]",
				"[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
			],
			"properties": {
				"addressPrefix": "10.0.1.0/24",
				"networkSecurityGroup": {
					"id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_Bastion_NSG_name'))]"
				},

				"delegations": [],
				"privateEndpointNetworkPolicies": "Enabled",
				"privateLinkServiceNetworkPolicies": "Enabled"
			}
		}
	]
}
